# Auto_Hack_Lone_wolf

./: .env.template  .gitignore  Dockerfile  FUTURE_PLANS.md  Features.md  README.md  agent.py  auth_routes.py  auth_utils.py  calendar_utils.py  data.py  database.py  debug_api.py  docker-compose.yml  fast_api_server.py  fpdf_utils.py  history_routes.py  main.py  models.py  project_details.txt  pyproject.toml  read_log_pdf.py  sql_models.py  start_prod.sh  streamlit_app.py  test_hash.py  travel-agent.service  travel_agent.db
app/: main.py
app/api/routers/: auth.py  history.py  plan.py
app/core/: agent.py  data.py  database.py  destinations.py  images.py  parser.py  prompts.py
app/data/: destinations.json
app/models/: domain.py  sql.py
app/services/: auth.py  calendar.py  pdf.py
scripts/: cli.py  debug_api.py  read_log_pdf.py  test_hash.py
static/: index.html  style.css
tests/: conftest.py  test_agent.py  test_api.py  test_calendar_utils.py  test_destinations.py  test_fpdf_utils.py  test_fuzzy_parser.py  test_images.py  test_integration_auth.py  test_real_search.py  test_static_accessibility.py
